Refactorings. Bean methods not public.