@@ -10,7 +10,6 @@
  *******************************************************************************/
 package org.springframework.ide.vscode.boot.java.rewrite.codeaction;
 
-import java.net.URI;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -21,9 +20,8 @@ import org.eclipse.jdt.core.dom.CompilationUnit;
 import org.eclipse.jdt.core.dom.ITypeBinding;
 import org.eclipse.jdt.core.dom.MethodDeclaration;
 import org.eclipse.lsp4j.CodeAction;
-import org.eclipse.lsp4j.CodeActionCapabilities;
+import org.eclipse.lsp4j.CodeActionContext;
 import org.eclipse.lsp4j.Command;
-import org.eclipse.lsp4j.TextDocumentIdentifier;
 import org.eclipse.lsp4j.WorkspaceEdit;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 import org.openrewrite.java.spring.NoRequestMappingAnnotation;
@@ -33,7 +31,6 @@ import org.springframework.ide.vscode.boot.java.rewrite.RewriteRefactorings;
 import org.springframework.ide.vscode.commons.java.IJavaProject;
 import org.springframework.ide.vscode.commons.languageserver.java.JavaProjectFinder;
 import org.springframework.ide.vscode.commons.languageserver.util.SimpleLanguageServer;
-import org.springframework.ide.vscode.commons.languageserver.util.SimpleTextDocumentService;
 import org.springframework.ide.vscode.commons.util.text.IRegion;
 import org.springframework.ide.vscode.commons.util.text.TextDocument;
 
@@ -70,33 +67,16 @@ public class NoRequestMappings extends AbstractRewriteJavaCodeAction {
 
 	@Override
 	public WorkspaceEdit perform(List<?> args) {
-		SimpleTextDocumentService documents = server.getTextDocumentService();
-		String docUri = (String) args.get(0);
-		TextDocument doc = documents.getLatestSnapshot(docUri);
-		
-		Optional<IJavaProject> project = projectFinder.find(new TextDocumentIdentifier(docUri));
-		
-		if (project.isPresent()) {
-			return orCuCache.withCompilationUnit(project.get(), URI.create(docUri), cu -> {
-				if (cu == null) {
-					throw new IllegalStateException("Cannot parse Java file: " + docUri);
-				}
-				return applyRecipe(new NoRequestMappingAnnotation(), doc, cu);
-			});
-		}
-		return null;
+		return perform(args, () -> new NoRequestMappingAnnotation());
 	}
 
 	@Override
-	public List<Either<Command, CodeAction>> getCodeActions(CodeActionCapabilities capabilities, TextDocument doc, IRegion region, IJavaProject project,
+	protected List<Either<Command, CodeAction>> provideCodeActions(CodeActionContext context, TextDocument doc, IRegion region, IJavaProject project,
 			CompilationUnit cu, ASTNode node) {
-		// Only supports resolvable code action for now
-		if (!isResolve(capabilities, "edit")) {
-			return Collections.emptyList();
-		}
-		return findAppropriateMethodDeclaration(node).map(m -> createCodeAction("Replace all @RequestMapping with @GetMapping etc.", List.of(
-				doc.getId().getUri()
-		))).map(ca -> List.of(Either.<Command, CodeAction>forRight(ca))).orElse(Collections.emptyList());
+		return findAppropriateMethodDeclaration(node).map(m -> List.of(
+				Either.<Command, CodeAction>forRight(createCodeAction("Replace @RequestMapping with @GetMapping etc. in file", List.of(doc.getId().getUri(), false))),
+				Either.<Command, CodeAction>forRight(createCodeAction("Replace @RequestMapping with @GetMapping etc. in project", List.of(doc.getId().getUri(), true)))
+		)).orElse(Collections.emptyList());
 	}
 	
 	
